--- a/src/public/user-cms/css/style.less
+++ b/src/public/user-cms/css/style.less
@@ -4,7 +4,7 @@
 @color2: #58666E; /* lighten black */ /* This font also default text color */
 @color3: #E4E4E4; /* grey */
 @color4: #f4f4f4; /* lighten grey */ 
-@color5: #8BC34A; /* default */
+@color5: #009688; /* default */
 @color6: #3F51B5; /* primary */
 @color7: #4CAF50; /* success */
 @color8: #00B8D4; /* info */
