--- a/src/views/user-cms/layouts/sidebar.ejs
+++ b/src/views/user-cms/layouts/sidebar.ejs
@@ -7,23 +7,21 @@
       <li><a href="#"><span class="icon color7"><i class="fa fa-flask"></i></span>Quản lý bài review sách<span class="caret"></span></a>
         <ul>
           <li><a href="/user-cms/book-review">Danh sách</a></li>
-          <li><a href="tabs.html">Tạo mới</a></li>
+          <li><a href="/user-cms/book-review/create">Tạo mới</a></li>
           <!-- <li><a href="others.html">Others<span class="label label-danger">NEW</span></a></li> -->
         </ul>
       </li>
       <li><a href="#"><span class="icon color9"><i class="fa fa-th"></i></span>Quản lý bài blog<span class="caret"></span></a>
         <ul>
           <li><a href="/user-cms/blog">Danh sách</a></li>
-          <li><a href="data-table.html">Tạo mới</a></li>
+          <li><a href="/user-cms/blog/create">Tạo mới</a></li>
         </ul>
       </li>
     </ul>
     
     <ul class="sidebar-panel nav">
-      <li class="sidetitle">MORE</li>
-      <li><a href="grid.html"><span class="icon color15"><i class="fa fa-columns"></i></span>Grid System</a></li>
-      <li><a href="customizable.html"><span class="icon color10"><i class="fa fa-lightbulb-o"></i></span>Customizable</a></li>
-      <li><a href="helper-classes.html"><span class="icon color8"><i class="fa fa-code"></i></span>Helper Classes</a></li>
+      <li class="sidetitle">Thêm</li>
+      <!-- <li><a href="grid.html"><span class="icon color15"><i class="fa fa-folder"></i></span>Quản lý file</a></li> -->
     </ul>
     
     <div class="sidebar-plan">
