--- a/src/views/user/layouts/login-form.ejs
+++ b/src/views/user/layouts/login-form.ejs
@@ -7,14 +7,14 @@
         	<div class="row">
         		 <label for="email">
                     <%- __('auth.email') %>
-                    <input type="email" name="email" id="email" placeholder="<%- __('auth.email') %> " required/>
+                    <input type="email" name="email" id="email" placeholder="<%- __('auth.email') %> " value="a@gmail.com" required/>
                 </label>
         	</div>
            
             <div class="row">
             	<label for="password">
                     <%- __('auth.password') %>
-                    <input type="password" name="password" id="password" placeholder="<%- __('auth.password') %>" required/>
+                    <input type="password" name="password" id="password" placeholder="<%- __('auth.password') %>" value="123456" required/>
                 </label>
             </div>
             <div class="row">
