--- a/src/public/user-cms/css/style.css
+++ b/src/public/user-cms/css/style.css
@@ -37,7 +37,7 @@
   color: #f4f4f4;
 }
 .color5 {
-  color: #8BC34A;
+  color: #009688;
 }
 .color6 {
   color: #3F51B5;
@@ -86,7 +86,7 @@
   background: #f4f4f4;
 }
 .color5-bg {
-  background: #8BC34A;
+  background: #009688;
 }
 .color6-bg {
   background: #3F51B5;
@@ -126,7 +126,7 @@
   color: #F44336;
 }
 .color-fix {
-  color: #8BC34A;
+  color: #009688;
 }
 body {
   background: #fff;
@@ -145,7 +145,7 @@ body {
   background: #D5EAFF;
 }
 a {
-  color: #8BC34A;
+  color: #009688;
   text-decoration: none;
 }
 a:hover,
@@ -300,7 +300,7 @@ Top
 ================================================================================= */
 #top {
   height: 60px;
-  background: #8BC34A;
+  background: #009688;
   color: #fff;
   width: 100%;
   position: fixed;
@@ -619,7 +619,7 @@ Sidebar
   margin: 7px 0;
 }
 .sidebar-plan .progress-bar {
-  background: #8BC34A;
+  background: #009688;
 }
 .sidebar-plan .link {
   position: absolute;
@@ -640,7 +640,7 @@ Sidebar
   color: #fff;
 }
 .sidebar-colorful .color1 {
-  background: #8BC34A;
+  background: #009688;
 }
 .sidebar-colorful .color2 {
   background: #3F51B5;
@@ -714,7 +714,7 @@ Sidepanel
   display: block;
   width: 300px;
   position: fixed;
-  background: #8BC34A;
+  background: #009688;
   z-index: 2;
   top: 60px;
   padding: 0;
@@ -745,7 +745,7 @@ Sidepanel
 .sidepanel .nav-tabs > li.active > a,
 .sidepanel .nav-tabs > li.active > a:hover,
 .sidepanel .nav-tabs > li.active > a:focus {
-  color: #8BC34A;
+  color: #009688;
   cursor: default;
   background-color: #fff;
   border: none;
@@ -1199,7 +1199,7 @@ Presentation
   margin: -20px;
 }
 .alert1 {
-  background: #8BC34A;
+  background: #009688;
 }
 .alert2 {
   background: #3F51B5;
@@ -1239,8 +1239,8 @@ Presentation
   background: #E99844;
 }
 .alert1-light {
-  background: #d5e9bd;
-  color: #223110;
+  background: #30ffec;
+  color: #000000;
 }
 .alert2-light {
   background: #abb4e2;
@@ -1624,7 +1624,7 @@ Mailbox
   line-height: normal;
 }
 .status .who .name b {
-  color: #8BC34A;
+  color: #009688;
 }
 .status .who .from {
   font-size: 12px;
@@ -2013,8 +2013,8 @@ Top Stats
 Awesome Bootstrap Checkbox Rewrite
 ================================================================================= */
 .checkbox-primary input[type="checkbox"]:checked + label::before {
-  background-color: #8BC34A;
-  border-color: #8BC34A;
+  background-color: #009688;
+  border-color: #009688;
 }
 .checkbox-primary input[type="checkbox"]:checked + label::after {
   color: #fff;
@@ -2048,13 +2048,13 @@ Awesome Bootstrap Checkbox Rewrite
   color: #fff;
 }
 .radio-primary input[type="radio"] + label::after {
-  background-color: #8BC34A;
+  background-color: #009688;
 }
 .radio-primary input[type="radio"]:checked + label::before {
-  border-color: #8BC34A;
+  border-color: #009688;
 }
 .radio-primary input[type="radio"]:checked + label::after {
-  background-color: #8BC34A;
+  background-color: #009688;
 }
 .radio-danger input[type="radio"] + label::after {
   background-color: #F44336;
@@ -2302,7 +2302,7 @@ fieldset[disabled] .btn {
 }
 /* Button Default */
 .btn-default {
-  background-color: #8BC34A;
+  background-color: #009688;
   color: #fff;
 }
 .btn-default:hover,
@@ -2311,18 +2311,18 @@ fieldset[disabled] .btn {
 .btn-default:active,
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
-  background-color: #95c859;
+  background-color: #00aa9a;
   color: #fff;
 }
 .btn-default:active,
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
-  background: #7eb73d;
+  background: #007d71;
   box-shadow: none;
   color: #fff;
 }
 .btn-default .badge {
-  color: #8BC34A;
+  color: #009688;
   background-color: #fff;
 }
 /* Button Primary */
@@ -2656,7 +2656,7 @@ fieldset[disabled] .btn {
   border-radius: 4px;
 }
 .label-default {
-  background: #8BC34A;
+  background: #009688;
 }
 .label-primary {
   background: #3F51B5;
@@ -3008,7 +3008,7 @@ div[data-role="editor-toolbar"] {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #8BC34A;
+  background-color: #009688;
 }
 .nav-stacked li {
   width: 100%;
@@ -3059,7 +3059,7 @@ div[data-role="editor-toolbar"] {
   color: inherit;
   cursor: default;
   background-color: transparent;
-  border-bottom: 3px solid #8BC34A;
+  border-bottom: 3px solid #009688;
 }
 .nav-icon .fa {
   font-size: 16px;
@@ -3098,7 +3098,7 @@ div[data-role="editor-toolbar"] {
   color: #fff;
 }
 .tabcolor5-bg {
-  background: #8BC34A;
+  background: #009688;
 }
 .tabcolor6-bg {
   background: #3F51B5;
@@ -3254,8 +3254,8 @@ div[data-role="editor-toolbar"] {
 }
 /* Panel Primary */
 .panel-primary {
-  border-color: #8BC34A;
-  background: #8BC34A;
+  border-color: #009688;
+  background: #009688;
   color: #fff;
 }
 .panel-primary > .panel-heading {
@@ -3264,11 +3264,11 @@ div[data-role="editor-toolbar"] {
   border-bottom: transparent;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #8BC34A;
+  border-top-color: #009688;
 }
 .panel-primary .panel-title {
   color: #fff;
-  background: #8BC34A;
+  background: #009688;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 .panel-primary .panel-footer {
@@ -3276,7 +3276,7 @@ div[data-role="editor-toolbar"] {
   background: rgba(255, 255, 255, 0.04);
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #8BC34A;
+  border-bottom-color: #009688;
 }
 /* Panel Success */
 .panel-success {
@@ -3611,7 +3611,7 @@ div[data-role="editor-toolbar"] {
   box-shadow: none;
 }
 .progress-bar {
-  background: #8BC34A;
+  background: #009688;
   font-size: 12px;
   font-weight: 600;
   line-height: normal;
@@ -4044,7 +4044,7 @@ Widgets
   padding: 18px 0;
 }
 .quick-menu a .fa {
-  color: #8BC34A;
+  color: #009688;
 }
 .quick-menu a:hover {
   background: rgba(0, 0, 0, 0.03);
@@ -4093,7 +4093,7 @@ Widgets
 /* widget table-dic */
 .table-dic .fa {
   text-shadow: none;
-  color: #8BC34A;
+  color: #009688;
   font-size: 20px;
   margin-right: 8px;
 }
