--- a/src/views/user-cms/dashboard.ejs
+++ b/src/views/user-cms/dashboard.ejs
@@ -33,18 +33,13 @@
 
         <!-- Start Page Header -->
         <div class="page-header">
-            <h1 class="title">Dashboard</h1>
-            <ol class="breadcrumb">
-                <li class="active">This is a quick overview of some features</li>
-            </ol>
+            <h1 class="title">Trang chủ</h1>
 
             <!-- Start Page Header Right Div -->
             <div class="right">
             <div class="btn-group" role="group" aria-label="...">
-                <a href="index.html" class="btn btn-light">Dashboard</a>
-                <a href="#" class="btn btn-light"><i class="fa fa-refresh"></i></a>
-                <a href="#" class="btn btn-light"><i class="fa fa-search"></i></a>
-                <a href="#" class="btn btn-light" id="topstats"><i class="fa fa-line-chart"></i></a>
+                <a href="/user-cms/dashboard" class="btn btn-light">Dashboard</a>
+                <a href="/user-cms/dashboard" class="btn btn-light"><i class="fa fa-refresh"></i></a>
             </div>
             </div>
             <!-- End Page Header Right Div -->
