--- a/src/views/user-cms/layouts/javascript.ejs
+++ b/src/views/user-cms/layouts/javascript.ejs
@@ -102,6 +102,8 @@ Moment.js
 ================================================ -->
 <script src="/user-cms/js/moment/moment.min.js"></script>
 
+<script src="/javascripts/moment-with-locale.js"></script>
+
 <!-- ================================================
 Full Calendar
 ================================================ -->
@@ -122,6 +124,12 @@ Below codes are only for index widgets
 <script src="/axios/dist/axios.min.js"></script>
 
 <script src="/user-cms/js/custom-jquery.js"></script>
+
+<script>
+  $(document).ready(function() {
+    
+  });
+</script>
 
 <!-- Basic Date Range Picker -->
 <script>
