--- a/src/views/admin/layouts/javascript.ejs
+++ b/src/views/admin/layouts/javascript.ejs
@@ -21,6 +21,8 @@ Bootstrap Toggle
 ================================================ -->
 <script src="/admin/js/bootstrap-toggle/bootstrap-toggle.min.js"></script>
 
+<script src="/javascripts/cute-alert.js"></script>
+
 <!-- ================================================
 Moment.js
 ================================================ -->
@@ -33,6 +35,9 @@ Bootstrap Date Range Picker
 
 <script>
 	$(document).ready(function () {
+
+		
+
         $('.btn-search').click((e) => {
 			$('#panel-search').toggle();
 		});
