--- a/src/views/admin/layouts/sidebar.ejs
+++ b/src/views/admin/layouts/sidebar.ejs
@@ -21,6 +21,7 @@
         </ul>
       </li>
       <li><a href="/admin/banner"><span class="icon color15"><i class="fa fa-columns"></i></span>Quản lý banner</a></li>
+      <li><a href="/admin/blog-tags"><span class="icon color15"><i class="fa fa-tags"></i></span>Quản lý blog tag</a></li>
       <li><a href="/admin/history"><span class="icon color15"><i class="fa fa-history"></i></span>Quản lý lịch sử</a></li>
       <!-- <li><a href="customizable.html"><span class="icon color10"><i class="fa fa-lightbulb-o"></i></span>Customizable</a></li>
       <li><a href="helper-classes.html"><span class="icon color8"><i class="fa fa-code"></i></span>Helper Classes</a></li> -->
