--- a/src/public/admin/css/style.less
+++ b/src/public/admin/css/style.less
@@ -1,15 +1,15 @@
 /* Colors */
-@color0: #3D464D; /* sidebar background */
+@color0: #fff; /* sidebar background */
 @color1: #37363E; /* black */ /* This font also default title color */
 @color2: #58666E; /* lighten black */ /* This font also default text color */
 @color3: #E4E4E4; /* grey */
-@color4: #F5F5F5; /* lighten grey */ 
-@color5: #399BFF; /* default */
-@color6: #33577B; /* primary */
-@color7: #26A65B; /* success */
-@color8: #51B7A3; /* info */
-@color9: #F39C12; /* warning */
-@color10: #EF4836; /* danger */
+@color4: #f4f4f4; /* lighten grey */ 
+@color5: #8BC34A; /* default */
+@color6: #3F51B5; /* primary */
+@color7: #4CAF50; /* success */
+@color8: #00B8D4; /* info */
+@color9: #FF6D00; /* warning */
+@color10: #F44336; /* danger */
 @color11: #9A80B9; /* purple */
 @color12: #A2DED0; /* cs */
 @color13: #D2527F; /* cs */
@@ -73,7 +73,6 @@ body{
 	color: @contenttext;
 	margin: 0;
 	line-height: 1.7em;
-	overflow-x: hidden;
 	font-size: 13px;
 	font-family: @primaryfont; 
 	outline: 0;
@@ -92,6 +91,7 @@ a {
 }
 a:hover,
 a:focus {
+  color: #333;
   text-decoration: none;
 }
 
@@ -205,6 +205,7 @@ Sidebar Open Button - Show or Hide Sidebar
 }
 .sidebar-open-button:hover, .sidebar-open-button:active{
 	background: rgba(255, 255, 255, 0.07);
+	color: rgba(0, 0, 0, 0.6);
 }
 .sidebar-open-button-mobile{
 	height: 60px;
@@ -219,6 +220,7 @@ Sidebar Open Button - Show or Hide Sidebar
 }
 .sidebar-open-button-mobile:hover, .sidebar-open-button-mobile:active{
 	background: rgba(255, 255, 255, 0.07);
+	color: rgba(0, 0, 0, 0.6);
 }
 
 /* =================================================================================
@@ -297,6 +299,7 @@ Sidepanel Open Button - Show or Hide Sidepanel
 }
 .sidepanel-open-button:hover, .sidepanel-open-button:active{
 	background: rgba(255, 255, 255, 0.05);
+	color: rgba(0, 0, 0, 0.6);
 }
 
 /* =================================================================================
@@ -386,6 +389,7 @@ Sidebar
 .sidebar{
     width:250px;
     position: absolute;
+    .fa{text-shadow:none;}
     top: 60px;
     left: 0;
     font-family: @titlefont;
@@ -394,7 +398,7 @@ Sidebar
     font-size: 13px;
     font-weight: normal;
     z-index: 500;
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(0, 0, 0, 0.8);
 
     .label{
     	font-size: 10px;
@@ -407,7 +411,7 @@ Sidebar
     	font-weight: 600;
     }
     .label-default{
-    	background: rgba(255, 255, 255, 0.2);
+    	background: rgba(0, 0, 0, 0.4);
     }
 }
 
@@ -416,17 +420,17 @@ Sidebar
 	background: none; 
     margin:0px 20px 0px 20px;
     border:none;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1); 
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1); 
     padding: 15px 0px;
     li{
     	a{
     		display: block;
-        	color: rgba(255, 255, 255, 0.6);
+        	color: rgba(0, 0, 0, 0.8);
         	padding: 9px 20px 9px 54px;
         	margin-left: -20px;
         	margin-right: -20px;
         	position: relative;
-        	.caret{position: absolute;right: 20px; top: 18px; color: rgba(255, 255, 255, 0.4);}
+        	.caret{position: absolute;right: 20px; top: 18px; color: rgba(0, 0, 0, 0.4);}
     	}
 
     	.icon{
@@ -434,7 +438,7 @@ Sidebar
         	left: 20px;
         	top: 8px;
         	display: block;
-        	color: rgba(255, 255, 255, 0.6);
+        	color: rgba(0, 0, 0, 0.8);
         	font-size: 19px;
         	border-radius: 3px;
         	text-align: center;
@@ -444,12 +448,12 @@ Sidebar
     	}
     	
 
-    	a:hover, a.active {color:#f2f2f2;background: rgba(0, 0, 0, 0.2);.icon{color: #fff;}}
+    	a:hover, a.active {background: rgba(0, 0, 0, 0.1); color: rgba(0, 0, 0, 0.9) }
 
     	ul {
     		display: none;
     		padding: 0;
-    		background: rgba(0, 0, 0, 0.1);
+    		background: rgba(0, 0, 0, 0.03);
     		border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     		font-size: 13px;
     		margin: 0 -20px 0 -20px;
@@ -459,11 +463,11 @@ Sidebar
     			margin: 0;
     			a{
     				margin: 0px; 
-    				color: rgba(255, 255, 255, 0.6);
+    				color: rgba(0, 0, 0, 0.6);
     				padding: 9px 20px 9px 54px;
     			}
     			a:hover{
-    				background: rgba(0, 0, 0, 0.08);
+    				background: rgba(0, 0, 0, 0.04);
     			}
     		}
     	}
@@ -472,7 +476,7 @@ Sidebar
 }
 
 .sidetitle{
-	color: rgba(255, 255, 255, 0.5);
+	color: rgba(0, 0, 0, 0.5);
     font-size: 10px;
     padding: 0;
     margin: 0 0 5px 3px;
@@ -485,7 +489,7 @@ Sidebar
 	bottom: 0;
 	.progress{
 		height: 6px;
-		background: rgba(0, 0, 0, 0.3);
+		background: rgba(0, 0, 0, 0.2);
 		margin: 7px 0;
 	}
 	.progress-bar{
@@ -494,16 +498,16 @@ Sidebar
 	.link{
 		position: absolute;
 		right: 20px;
-		color: rgba(255, 255, 255, 0.6);
+		color: rgba(0, 0, 0, 0.6);
 	}
 	.link:hover{
-		color: #fff;
+		color: rgba(0, 0, 0, 0.8);
 	}
 	.space{
 		display: block;
 		font-size: 11px;
 		text-align: center;
-		color: rgba(255, 255, 255, 0.5);
+		color: rgba(0, 0, 0, 0.7);
 	}
 }
 
@@ -583,7 +587,7 @@ Sidepanel
     	display: block;
     	width: 300px;
     	position: fixed;
-    	background: @color0;
+    	background: @color5;
     	z-index: 2;
     	top: 60px;
     	padding: 0;
@@ -614,7 +618,7 @@ Sidepanel
 	.nav-tabs > li.active > a,
 	.nav-tabs > li.active > a:hover,
 	.nav-tabs > li.active > a:focus {
-  		color: #399BFF;
+  		color: @color5;
   		cursor: default;
   		background-color: #fff;
   		border: none;
@@ -765,6 +769,7 @@ Content
 	padding-top: 80px;
 	margin-left: 250px;
 	background:@color4;
+	border-left:1px solid rgba(0, 0, 0, 0.05);
 }
 
 /* =================================================================================
@@ -846,7 +851,7 @@ Page Header
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
-	background: @color0;
+	background: #212121;
 	opacity: 0.99;
 	img{
 		width: 40px;
@@ -3279,8 +3284,8 @@ div[data-role="editor-toolbar"] {
 
 /* Panel Dark */
 .panel-dark {
-  border-color: @color0;
-  background: @color0;
+  border-color: #333;
+  background: #333;
   color: #fff;
 }
 .panel-dark > .panel-heading {
@@ -3289,7 +3294,7 @@ div[data-role="editor-toolbar"] {
   border-bottom: transparent;
 }
 .panel-dark > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: @color0;
+  border-top-color: #333;
 }
 .panel-dark .panel-title{
 	color: #fff;
@@ -3301,7 +3306,7 @@ div[data-role="editor-toolbar"] {
 	background: rgba(255, 255, 255, 0.04);
 }
 .panel-dark > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: @color0;
+  border-bottom-color: #333;
 }
 
 
